--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "esprima": "^4.0.1",
+    "jslint": "^0.12.0",
     "react": "^16.5.2",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-redux": "^5.0.7",
+    "react-scripts": "2.0.5",
+    "react-split-pane": "^0.1.84",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
