--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.2.2",
+    "codemirror": "^5.40.2",
     "esprima": "^4.0.1",
     "jslint": "^0.12.0",
     "react": "^16.5.2",
