--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@material-ui/core": "^3.2.2",
     "codemirror": "^5.40.2",
     "esprima": "^4.0.1",
-    "jslint": "^0.12.0",
+    "highlight.js": "^9.13.1",
     "react": "^16.5.2",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.5.2",
+    "react-highlight": "^0.12.0",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
     "react-split-pane": "^0.1.84",
+    "recast": "^0.16.0",
     "redux": "^4.0.1"
   },
   "scripts": {
